<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_detail_scene"
    tools:context=".detail.DetailActivity">

    <ImageView
        android:id="@+id/img_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/story_picture"
        android:scaleType="fitCenter"
        android:transitionName="picture"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dark_description_container"
        android:paddingStart="16dp"
        android:paddingTop="32dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/placeholder_description"
        android:transitionName="description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/expand_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_description"
        app:layout_constraintTop_toTopOf="@+id/tv_description"
        app:srcCompat="@drawable/baseline_keyboard_arrow_up_24" />

</androidx.constraintlayout.motion.widget.MotionLayout>